fix spacing for causes dropdown #172

--- a/sites/all/themes/ds/css/style.css
+++ b/sites/all/themes/ds/css/style.css
@@ -2086,7 +2086,7 @@ nav[role=navigation] .causes-dropdown-trigger {
   position: relative;
 }
 nav[role=navigation] .causes-dropdown-trigger .causes-dropdown {
-  top: 30px;
+  top: 10px;
   left: -9px;
 }
 nav[role=navigation] .causes-dropdown-trigger .causes-dropdown ul {
