--- a/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
+++ b/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
@@ -159,7 +159,7 @@ nav[role=navigation]
   .causes-dropdown-trigger
     position: relative
     .causes-dropdown
-      top: 30px
+      top: 10px
       left: -9px
       ul
         +clean-list
